test/invalid/utf8.anf
mod utf8 {
    val _0x80 = ""
    val _0xbf = ""
    val _2cont = ""
    val _3cont = ""
    val _4cont = ""
    val _5cont = ""
    val _6cont = ""
    val _7cont = ""
    val _64cont = ""
}
